--- a/docker/unit/Dockerfile
+++ b/docker/unit/Dockerfile
@@ -41,6 +41,16 @@ RUN apt-get update -qq && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+# ==== УСТАНОВКА GD ====
+RUN apt-get update && apt-get install -y \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libpng-dev \
+    libwebp-dev \
+    libxpm-dev \
+ && docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp --with-xpm \
+ && docker-php-ext-install gd
+
 # ПРАВА ДОСТУПА
 RUN mkdir -p /docker-entrypoint.d && \
     chmod 755 /var/lib/unit && \
